deploy: 4cb7add18930e770c674bf79a58f9bc683ea8eb3

--- a/articles.html
+++ b/articles.html
@@ -2383,7 +2383,7 @@ function init_posts_list() {
 <div class="metadata">
 <div class="publishedDate">May 20, 2025</div>
 <div class="dt-authors">
-<div class="dt-author">Holger </div>
+<div class="dt-author">Holger Löwe</div>
 <div class="dt-author">Christian A. Scholbeck</div>
 <div class="dt-author">Christian Heumann</div>
 <div class="dt-author">Bernd Bischl</div>
