--- a/issues/2024-3/index.html
+++ b/issues/2024-3/index.html
@@ -21,7 +21,7 @@
 <style type="text/css">code{white-space: pre;}</style>
 <style type="text/css" data-origin="pandoc">
 pre > code.sourceCode { white-space: pre; position: relative; }
-pre > code.sourceCode > span { display: inline-block; line-height: 1.25; }
+pre > code.sourceCode > span { line-height: 1.25; }
 pre > code.sourceCode > span:empty { height: 1.2em; }
 .sourceCode { overflow: visible; }
 code.sourceCode > span { color: inherit; text-decoration: inherit; }
@@ -32,7 +32,7 @@ div.sourceCode { overflow: auto; }
 }
 @media print {
 pre > code.sourceCode { white-space: pre-wrap; }
-pre > code.sourceCode > span { text-indent: -5em; padding-left: 5em; }
+pre > code.sourceCode > span { display: inline-block; text-indent: -5em; padding-left: 5em; }
 }
 pre.numberSource code
   { counter-reset: source-line 0; }
@@ -309,7 +309,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 <!--/radix_placeholder_rmarkdown_metadata-->
   
   <script type="text/json" id="radix-resource-manifest">
-  {"type":"character","attributes":{},"value":["2024-3.pdf","RJournal.sty","RJwrapper.tex","Rlogo-5.png"]}
+  {"type":"character","attributes":{},"value":["2024-3.pdf","doi.xml","RJournal.sty","RJwrapper.tex","Rlogo-5.png"]}
   </script>
   <!--radix_placeholder_navigation_in_header-->
 <meta name="distill:offset" content="../.."/>
@@ -2445,7 +2445,7 @@ d-appendix d-footnote-list a.footnote-backlink {
 <p><a href="../../articles/RJ-2024-027/">GeoAdjust: Adjusting for Positional Uncertainty in Geostatistial Analysis of DHS Data</a><br>Umut Altay, John Paige, Andrea Riebler and Geir-Arne Fuglstad 15</p>
 <p><a href="../../articles/RJ-2024-028/">SIHR: Statistical Inference in High-Dimensional Linear and Logistic Regression Models</a><br>Prabrisha Rakshit, Zhenyu Wang, Tony Cai and Zijian Guo 27</p>
 <p><a href="../../articles/RJ-2024-029/">SNSeg: An R Package for Time Series Segmentation via Self-Normalization</a><br>Shubo Sun, Zifeng Zhao, Feiyu Jiang and Xiaofeng Shao 46</p>
-<p><a href="../../articles/RJ-2024-024/">fmeffects: An R Package for Forward Marginal Effects</a><br>Holger , Christian A. Scholbeck, Christian Heumann, Bernd Bischl and Giuseppe Casalicchio 67</p>
+<p><a href="../../articles/RJ-2024-024/">fmeffects: An R Package for Forward Marginal Effects</a><br>Holger Löwe, Christian A. Scholbeck, Christian Heumann, Bernd Bischl and Giuseppe Casalicchio 67</p>
 <p><a href="../../articles/RJ-2024-025/">GSSTDA: Implementation in an R Package of the Progression of Disease with Survival Analysis (PAD-S) that Integrates Information on Genes Linked to Survival in the Mapper Filter Function</a><br>Miriam Esteve, Raquel Bosch-Romeu, Antonio Falco, Jaume Fores and Joan Climent 90</p>
 <p><a href="../../articles/RJ-2024-026/">Kernel Heaping - Kernel Density Estimation from regional aggregates via measurement error model</a><br>Lorena Gril, Laura Steinkemper, Marcus Groß and Ulrich Rendtel 115</p>
 <p><a href="../../articles/RJ-2024-030/">SLCARE: An R Package for Semiparametric Latent Class Analysis of Recurrent Events</a><br>Qi Yu and Limin Peng 134</p>
