deploy: b87f35fda2859147cd5466b3f6b528971f3161bc

--- a/issues/2024-4/index.html
+++ b/issues/2024-4/index.html
@@ -309,7 +309,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 <!--/radix_placeholder_rmarkdown_metadata-->
   
   <script type="text/json" id="radix-resource-manifest">
-  {"type":"character","attributes":{},"value":["2024-4.pdf","RJournal.sty","RJwrapper.tex","Rlogo-5.png"]}
+  {"type":"character","attributes":{},"value":["2024-4.pdf","doi.xml","RJournal.sty","RJwrapper.tex","Rlogo-5.png"]}
   </script>
   <!--radix_placeholder_navigation_in_header-->
 <meta name="distill:offset" content="../.."/>
@@ -2443,18 +2443,18 @@ d-appendix d-footnote-list a.footnote-backlink {
 <h3 id="contributed-research-articles">Contributed Research Articles</h3>
 <p><a href="../../articles/RJ-2024-037/">survivalSL: an R Package for Predicting Survival by a Super Learner</a><br>Camille Sabathe and Yohann Foucher 4</p>
 <p><a href="../../articles/RJ-2024-033/">IRTest: An R Package for Item Response Theory with Estimation of Latent Distribution</a><br>Seewoo Li 23</p>
-<p><a href="../../articles/RJ-2024-034/">Splinets – Orthogonal Splines for Functional Data Analysis</a><br>Rani Basna, Hiba Nassar and Krzysztof Podgórski 44</p>
-<p><a href="../../articles/RJ-2024-035/">Disaggregating Time-Series with Many Indicators: An Overview of the DisaggregateTS Package</a><br>Luke Mosley, Kaveh Salehzadeh Nobari, Giuseppe Brandi and Alex Gibberd 64</p>
-<p><a href="../../articles/RJ-2024-036/">LMest: An R Package for Estimating Generalized Latent Markov Models</a><br>Fulvia Pennoni, Silvia Pandolfi and Francesco Bartolucci 76</p>
-<p><a href="../../articles/RJ-2024-038/">Calculating Standardised Indices Using SEI</a><br>Sam Allen and Noelia Otero 104</p>
-<p><a href="../../articles/RJ-2024-039/">MultiStatM: Multivariate Statistical Methods in R</a><br>György Terdik and Emanuele Taufer 125</p>
-<p><a href="../../articles/RJ-2024-040/">Canonical Correlation Analysis of Survey Data: The SurveyCC R Package</a><br>Raul Cruz-Cano, Aaron Cohen and Erin Mead-Morse 143</p>
-<p><a href="../../articles/RJ-2024-041/">GPUmatrix: Seamlessly harness the power of GPU computing in R</a><br>César Lobato-Fernández, Juan A. Ferrer-Bonsoms and Angel Rubio 160</p>
-<p><a href="../../articles/RJ-2024-042/">UpAndDownPlots: An R Package for Displaying Absolute and Percentage Changes</a><br>Antony Unwin 181</p>
+<p><a href="../../articles/RJ-2024-034/">Splinets – Orthogonal Splines for Functional Data Analysis</a><br>Rani Basna, Hiba Nassar and Krzysztof Podgórski 42</p>
+<p><a href="../../articles/RJ-2024-035/">Disaggregating Time-Series with Many Indicators: An Overview of the DisaggregateTS Package</a><br>Luke Mosley, Kaveh Salehzadeh Nobari, Giuseppe Brandi and Alex Gibberd 62</p>
+<p><a href="../../articles/RJ-2024-036/">LMest: An R Package for Estimating Generalized Latent Markov Models</a><br>Fulvia Pennoni, Silvia Pandolfi and Francesco Bartolucci 74</p>
+<p><a href="../../articles/RJ-2024-038/">Calculating Standardised Indices Using SEI</a><br>Sam Allen and Noelia Otero 102</p>
+<p><a href="../../articles/RJ-2024-039/">MultiStatM: Multivariate Statistical Methods in R</a><br>György Terdik and Emanuele Taufer 123</p>
+<p><a href="../../articles/RJ-2024-040/">Canonical Correlation Analysis of Survey Data: The SurveyCC R Package</a><br>Raul Cruz-Cano, Aaron Cohen and Erin Mead-Morse 141</p>
+<p><a href="../../articles/RJ-2024-041/">GPUmatrix: Seamlessly harness the power of GPU computing in R</a><br>César Lobato-Fernández, Juan A. Ferrer-Bonsoms and Angel Rubio 158</p>
+<p><a href="../../articles/RJ-2024-042/">UpAndDownPlots: An R Package for Displaying Absolute and Percentage Changes</a><br>Antony Unwin 179</p>
 <h3 id="news-and-notes">News and Notes</h3>
-<p><a href="../../news/RJ-2024-4-bioconductor/">Bioconductor Notes, December 2024</a><br>Maria Doyle, Bioconductor Community Manager and Bioconductor Core Developer Team 197</p>
-<p><a href="../../news/RJ-2024-4-cran/">Changes on CRAN</a><br>Kurt Hornik, Uwe Ligges and Achim Zeileis 201</p>
-<p><a href="../../news/RJ-2024-4-rforwards/">News from the Forwards Taskforce</a><br>Heather Turner 203</p>
+<p><a href="../../news/RJ-2024-4-bioconductor/">Bioconductor Notes, December 2024</a><br>Maria Doyle, Bioconductor Community Manager and Bioconductor Core Developer Team 194</p>
+<p><a href="../../news/RJ-2024-4-cran/">Changes on CRAN</a><br>Kurt Hornik, Uwe Ligges and Achim Zeileis 198</p>
+<p><a href="../../news/RJ-2024-4-rforwards/">News from the Forwards Taskforce</a><br>Heather Turner 200</p>
 <!--radix_placeholder_article_footer-->
 <!--/radix_placeholder_article_footer-->
 </div>
