deploy: 8370db2840ff6f19c83c8ed77d2786972cfa5b4c

--- a/articles.html
+++ b/articles.html
@@ -2421,7 +2421,7 @@ function init_posts_list() {
 </div>
 </div>
 <div class="thumbnail">
-<img/>
+<img src="articles/RJ-2024-037/RJ-2024-037_files/figure-html5/calibfig2-1.png"/>
 </div>
 <div class="description">
 <h2>survivalSL: an R Package for Predicting Survival by a Super Learner</h2>
@@ -2564,7 +2564,7 @@ well.</p>
 </div>
 </div>
 <div class="thumbnail">
-<img/>
+<img data-src="articles/RJ-2024-035/RJ-2024-035_files/figure-html5/sub1-1.png"/>
 </div>
 <div class="description">
 <h2>Disaggregating Time-Series with Many Indicators: An Overview of the DisaggregateTS Package</h2>
