deploy: 353508db1bfc8bf848737c5f4749a5322234ffe3

--- a/submissions.html
+++ b/submissions.html
@@ -2247,7 +2247,9 @@ d-article > * {
 <h3 id="rmarkdown-using-rticles">Rmarkdown using rticles</h3>
 <p>The <code>rticles::rjournal_article</code> output format has been deprecated in favour of <code>rjtools</code>. Please use <code>rjtools</code> instead of <code>rticles</code>.</p>
 <h3 id="latex-format">LaTeX format</h3>
-<p>Articles can also be written using the <a href="https://journal.r-project.org/share/RJtemplate.zip">LaTeX template</a>. Instructions on using this template are provided in the <a href="https://journal.r-project.org/share/author-guide.pdf">LaTeX author guide</a>. LaTeX submissions that do not follow these guidelines will be rejected without review.</p>
+<p>We strongly encourage you to use Rmarkdown with the <code>rjtools</code> package. It makes the submission more reproducible, and makes it easier to render your article in both HTML and PDF formats.</p>
+<p>However, we still accept articles written in LaTeX, although they may be processed more slowly.</p>
+<p>If you do use LaTeX, you must use the <a href="https://github.com/rjournal/share/raw/refs/heads/master/RJtemplate.zip">LaTeX template</a>. Instructions on using this template are provided in the <a href="https://github.com/rjournal/share/raw/refs/heads/master/author-guide.pdf">LaTeX author guide</a>. LaTeX submissions that do not follow these guidelines will be rejected without review.</p>
 <p>The <code>rjtools</code> check functions described below can also be applied to check your files prior to submission.</p>
 <h1 id="checking-your-article">Checking your article</h1>
 <p>The <code>rjtools</code> package has a number of functions which can help you check that your article is ready to submit. These include:</p>
