--- a/_articles/RJ-2025-001/RJ-2025-001.html
+++ b/_articles/RJ-2025-001/RJ-2025-001.html
@@ -3333,20 +3333,20 @@ across both factors, and never exceeds .05 (continuous condition) or .04
 (ordinal condition) in absolute value. In contrast, the average bias in
 the ACQ factor is greater in the ordinal case.</p>
 <div class="layout-chunk" data-layout="l-page">
-<div id="vogueufmkv" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
-<style>#vogueufmkv table {
+<div id="nxamlanhqu" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
+<style>#nxamlanhqu table {
 font-family: system-ui, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 -webkit-font-smoothing: antialiased;
 -moz-osx-font-smoothing: grayscale;
 }
-#vogueufmkv thead, #vogueufmkv tbody, #vogueufmkv tfoot, #vogueufmkv tr, #vogueufmkv td, #vogueufmkv th {
+#nxamlanhqu thead, #nxamlanhqu tbody, #nxamlanhqu tfoot, #nxamlanhqu tr, #nxamlanhqu td, #nxamlanhqu th {
 border-style: none;
 }
-#vogueufmkv p {
+#nxamlanhqu p {
 margin: 0;
 padding: 0;
 }
-#vogueufmkv .gt_table {
+#nxamlanhqu .gt_table {
 display: table;
 border-collapse: collapse;
 line-height: normal;
@@ -3371,11 +3371,11 @@ border-left-style: none;
 border-left-width: 2px;
 border-left-color: #D3D3D3;
 }
-#vogueufmkv .gt_caption {
+#nxamlanhqu .gt_caption {
 padding-top: 4px;
 padding-bottom: 4px;
 }
-#vogueufmkv .gt_title {
+#nxamlanhqu .gt_title {
 color: #333333;
 font-size: 125%;
 font-weight: initial;
@@ -3386,7 +3386,7 @@ padding-right: 5px;
 border-bottom-color: #FFFFFF;
 border-bottom-width: 0;
 }
-#vogueufmkv .gt_subtitle {
+#nxamlanhqu .gt_subtitle {
 color: #333333;
 font-size: 85%;
 font-weight: initial;
@@ -3397,7 +3397,7 @@ padding-right: 5px;
 border-top-color: #FFFFFF;
 border-top-width: 0;
 }
-#vogueufmkv .gt_heading {
+#nxamlanhqu .gt_heading {
 background-color: #FFFFFF;
 text-align: center;
 border-bottom-color: #FFFFFF;
@@ -3408,12 +3408,12 @@ border-right-style: none;
 border-right-width: 1px;
 border-right-color: #D3D3D3;
 }
-#vogueufmkv .gt_bottom_border {
+#nxamlanhqu .gt_bottom_border {
 border-bottom-style: solid;
 border-bottom-width: 2px;
 border-bottom-color: #D3D3D3;
 }
-#vogueufmkv .gt_col_headings {
+#nxamlanhqu .gt_col_headings {
 border-top-style: solid;
 border-top-width: 2px;
 border-top-color: #D3D3D3;
@@ -3427,7 +3427,7 @@ border-right-style: none;
 border-right-width: 1px;
 border-right-color: #D3D3D3;
 }
-#vogueufmkv .gt_col_heading {
+#nxamlanhqu .gt_col_heading {
 color: #333333;
 background-color: #FFFFFF;
 font-size: 100%;
@@ -3446,7 +3446,7 @@ padding-left: 5px;
 padding-right: 5px;
 overflow-x: hidden;
 }
-#vogueufmkv .gt_column_spanner_outer {
+#nxamlanhqu .gt_column_spanner_outer {
 color: #333333;
 background-color: #FFFFFF;
 font-size: 100%;
@@ -3457,13 +3457,13 @@ padding-bottom: 0;
 padding-left: 4px;
 padding-right: 4px;
 }
-#vogueufmkv .gt_column_spanner_outer:first-child {
+#nxamlanhqu .gt_column_spanner_outer:first-child {
 padding-left: 0;
 }
-#vogueufmkv .gt_column_spanner_outer:last-child {
+#nxamlanhqu .gt_column_spanner_outer:last-child {
 padding-right: 0;
 }
-#vogueufmkv .gt_column_spanner {
+#nxamlanhqu .gt_column_spanner {
 border-bottom-style: solid;
 border-bottom-width: 2px;
 border-bottom-color: #D3D3D3;
@@ -3474,10 +3474,10 @@ overflow-x: hidden;
 display: inline-block;
 width: 100%;
 }
-#vogueufmkv .gt_spanner_row {
+#nxamlanhqu .gt_spanner_row {
 border-bottom-style: hidden;
 }
-#vogueufmkv .gt_group_heading {
+#nxamlanhqu .gt_group_heading {
 padding-top: 8px;
 padding-bottom: 8px;
 padding-left: 5px;
@@ -3502,7 +3502,7 @@ border-right-color: #D3D3D3;
 vertical-align: middle;
 text-align: left;
 }
-#vogueufmkv .gt_empty_group_heading {
+#nxamlanhqu .gt_empty_group_heading {
 padding: 0.5px;
 color: #333333;
 background-color: #FFFFFF;
@@ -3516,13 +3516,13 @@ border-bottom-width: 2px;
 border-bottom-color: #D3D3D3;
 vertical-align: middle;
 }
-#vogueufmkv .gt_from_md > :first-child {
+#nxamlanhqu .gt_from_md > :first-child {
 margin-top: 0;
 }
-#vogueufmkv .gt_from_md > :last-child {
+#nxamlanhqu .gt_from_md > :last-child {
 margin-bottom: 0;
 }
-#vogueufmkv .gt_row {
+#nxamlanhqu .gt_row {
 padding-top: 8px;
 padding-bottom: 8px;
 padding-left: 5px;
@@ -3540,7 +3540,7 @@ border-right-color: #D3D3D3;
 vertical-align: middle;
 overflow-x: hidden;
 }
-#vogueufmkv .gt_stub {
+#nxamlanhqu .gt_stub {
 color: #333333;
 background-color: #FFFFFF;
 font-size: 100%;
@@ -3552,7 +3552,7 @@ border-right-color: #D3D3D3;
 padding-left: 5px;
 padding-right: 5px;
 }
-#vogueufmkv .gt_stub_row_group {
+#nxamlanhqu .gt_stub_row_group {
 color: #333333;
 background-color: #FFFFFF;
 font-size: 100%;
@@ -3565,13 +3565,13 @@ padding-left: 5px;
 padding-right: 5px;
 vertical-align: top;
 }
-#vogueufmkv .gt_row_group_first td {
+#nxamlanhqu .gt_row_group_first td {
 border-top-width: 2px;
 }
-#vogueufmkv .gt_row_group_first th {
+#nxamlanhqu .gt_row_group_first th {
 border-top-width: 2px;
 }
-#vogueufmkv .gt_summary_row {
+#nxamlanhqu .gt_summary_row {
 color: #333333;
 background-color: #FFFFFF;
 text-transform: inherit;
@@ -3580,14 +3580,14 @@ padding-bottom: 8px;
 padding-left: 5px;
 padding-right: 5px;
 }
-#vogueufmkv .gt_first_summary_row {
+#nxamlanhqu .gt_first_summary_row {
 border-top-style: solid;
 border-top-color: #D3D3D3;
 }
-#vogueufmkv .gt_first_summary_row.thick {
+#nxamlanhqu .gt_first_summary_row.thick {
 border-top-width: 2px;
 }
-#vogueufmkv .gt_last_summary_row {
+#nxamlanhqu .gt_last_summary_row {
 padding-top: 8px;
 padding-bottom: 8px;
 padding-left: 5px;
@@ -3596,7 +3596,7 @@ border-bottom-style: solid;
 border-bottom-width: 2px;
 border-bottom-color: #D3D3D3;
 }
-#vogueufmkv .gt_grand_summary_row {
+#nxamlanhqu .gt_grand_summary_row {
 color: #333333;
 background-color: #FFFFFF;
 text-transform: inherit;
@@ -3605,7 +3605,7 @@ padding-bottom: 8px;
 padding-left: 5px;
 padding-right: 5px;
 }
-#vogueufmkv .gt_first_grand_summary_row {
+#nxamlanhqu .gt_first_grand_summary_row {
 padding-top: 8px;
 padding-bottom: 8px;
 padding-left: 5px;
@@ -3614,7 +3614,7 @@ border-top-style: double;
 border-top-width: 6px;
 border-top-color: #D3D3D3;
 }
-#vogueufmkv .gt_last_grand_summary_row_top {
+#nxamlanhqu .gt_last_grand_summary_row_top {
 padding-top: 8px;
 padding-bottom: 8px;
 padding-left: 5px;
@@ -3623,10 +3623,10 @@ border-bottom-style: double;
 border-bottom-width: 6px;
 border-bottom-color: #D3D3D3;
 }
-#vogueufmkv .gt_striped {
+#nxamlanhqu .gt_striped {
 background-color: rgba(128, 128, 128, 0.05);
 }
-#vogueufmkv .gt_table_body {
+#nxamlanhqu .gt_table_body {
 border-top-style: solid;
 border-top-width: 2px;
 border-top-color: #D3D3D3;
@@ -3634,7 +3634,7 @@ border-bottom-style: solid;
 border-bottom-width: 2px;
 border-bottom-color: #D3D3D3;
 }
-#vogueufmkv .gt_footnotes {
+#nxamlanhqu .gt_footnotes {
 color: #333333;
 background-color: #FFFFFF;
 border-bottom-style: none;
@@ -3647,7 +3647,7 @@ border-right-style: none;
 border-right-width: 2px;
 border-right-color: #D3D3D3;
 }
-#vogueufmkv .gt_footnote {
+#nxamlanhqu .gt_footnote {
 margin: 0px;
 font-size: 90%;
 padding-top: 4px;
@@ -3655,7 +3655,7 @@ padding-bottom: 4px;
 padding-left: 5px;
 padding-right: 5px;
 }
-#vogueufmkv .gt_sourcenotes {
+#nxamlanhqu .gt_sourcenotes {
 color: #333333;
 background-color: #FFFFFF;
 border-bottom-style: none;
@@ -3668,64 +3668,64 @@ border-right-style: none;
 border-right-width: 2px;
 border-right-color: #D3D3D3;
 }
-#vogueufmkv .gt_sourcenote {
+#nxamlanhqu .gt_sourcenote {
 font-size: 90%;
 padding-top: 4px;
 padding-bottom: 4px;
 padding-left: 5px;
 padding-right: 5px;
 }
-#vogueufmkv .gt_left {
+#nxamlanhqu .gt_left {
 text-align: left;
 }
-#vogueufmkv .gt_center {
+#nxamlanhqu .gt_center {
 text-align: center;
 }
-#vogueufmkv .gt_right {
+#nxamlanhqu .gt_right {
 text-align: right;
 font-variant-numeric: tabular-nums;
 }
-#vogueufmkv .gt_font_normal {
+#nxamlanhqu .gt_font_normal {
 font-weight: normal;
 }
-#vogueufmkv .gt_font_bold {
+#nxamlanhqu .gt_font_bold {
 font-weight: bold;
 }
-#vogueufmkv .gt_font_italic {
+#nxamlanhqu .gt_font_italic {
 font-style: italic;
 }
-#vogueufmkv .gt_super {
+#nxamlanhqu .gt_super {
 font-size: 65%;
 }
-#vogueufmkv .gt_footnote_marks {
+#nxamlanhqu .gt_footnote_marks {
 font-size: 75%;
 vertical-align: 0.4em;
 position: initial;
 }
-#vogueufmkv .gt_asterisk {
+#nxamlanhqu .gt_asterisk {
 font-size: 100%;
 vertical-align: 0;
 }
-#vogueufmkv .gt_indent_1 {
+#nxamlanhqu .gt_indent_1 {
 text-indent: 5px;
 }
-#vogueufmkv .gt_indent_2 {
+#nxamlanhqu .gt_indent_2 {
 text-indent: 10px;
 }
-#vogueufmkv .gt_indent_3 {
+#nxamlanhqu .gt_indent_3 {
 text-indent: 15px;
 }
-#vogueufmkv .gt_indent_4 {
+#nxamlanhqu .gt_indent_4 {
 text-indent: 20px;
 }
-#vogueufmkv .gt_indent_5 {
+#nxamlanhqu .gt_indent_5 {
 text-indent: 25px;
 }
-#vogueufmkv .katex-display {
+#nxamlanhqu .katex-display {
 display: inline-flex !important;
 margin-bottom: 0.75em !important;
 }
-#vogueufmkv div.Reactable > div.rt-table > div.rt-thead > div.rt-tr.rt-tr-group-header > div.rt-th-group:after {
+#nxamlanhqu div.Reactable > div.rt-table > div.rt-thead > div.rt-tr.rt-tr-group-header > div.rt-th-group:after {
 height: 0px !important;
 }
 </style>
@@ -4179,20 +4179,20 @@ height: 0px !important;
 </div>
 </div>
 <div class="layout-chunk" data-layout="l-page">
-<div id="thpsrplwoh" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
-<style>#thpsrplwoh table {
+<div id="tpktbrhbut" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
+<style>#tpktbrhbut table {
 font-family: system-ui, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 -webkit-font-smoothing: antialiased;
 -moz-osx-font-smoothing: grayscale;
 }
-#thpsrplwoh thead, #thpsrplwoh tbody, #thpsrplwoh tfoot, #thpsrplwoh tr, #thpsrplwoh td, #thpsrplwoh th {
+#tpktbrhbut thead, #tpktbrhbut tbody, #tpktbrhbut tfoot, #tpktbrhbut tr, #tpktbrhbut td, #tpktbrhbut th {
 border-style: none;
 }
-#thpsrplwoh p {
+#tpktbrhbut p {
 margin: 0;
 padding: 0;
 }
-#thpsrplwoh .gt_table {
+#tpktbrhbut .gt_table {
 display: table;
 border-collapse: collapse;
 line-height: normal;
@@ -4217,11 +4217,11 @@ border-left-style: none;
 border-left-width: 2px;
 border-left-color: #D3D3D3;
 }
-#thpsrplwoh .gt_caption {
+#tpktbrhbut .gt_caption {
 padding-top: 4px;
 padding-bottom: 4px;
 }
-#thpsrplwoh .gt_title {
+#tpktbrhbut .gt_title {
 color: #333333;
 font-size: 125%;
 font-weight: initial;
@@ -4232,7 +4232,7 @@ padding-right: 5px;
 border-bottom-color: #FFFFFF;
 border-bottom-width: 0;
 }
-#thpsrplwoh .gt_subtitle {
+#tpktbrhbut .gt_subtitle {
 color: #333333;
 font-size: 85%;
 font-weight: initial;
@@ -4243,7 +4243,7 @@ padding-right: 5px;
 border-top-color: #FFFFFF;
 border-top-width: 0;
 }
-#thpsrplwoh .gt_heading {
+#tpktbrhbut .gt_heading {
 background-color: #FFFFFF;
 text-align: center;
 border-bottom-color: #FFFFFF;
@@ -4254,12 +4254,12 @@ border-right-style: none;
 border-right-width: 1px;
 border-right-color: #D3D3D3;
 }
-#thpsrplwoh .gt_bottom_border {
+#tpktbrhbut .gt_bottom_border {
 border-bottom-style: solid;
 border-bottom-width: 2px;
 border-bottom-color: #D3D3D3;
 }
-#thpsrplwoh .gt_col_headings {
+#tpktbrhbut .gt_col_headings {
 border-top-style: solid;
 border-top-width: 2px;
 border-top-color: #D3D3D3;
@@ -4273,7 +4273,7 @@ border-right-style: none;
 border-right-width: 1px;
 border-right-color: #D3D3D3;
 }
-#thpsrplwoh .gt_col_heading {
+#tpktbrhbut .gt_col_heading {
 color: #333333;
 background-color: #FFFFFF;
 font-size: 100%;
@@ -4292,7 +4292,7 @@ padding-left: 5px;
 padding-right: 5px;
 overflow-x: hidden;
 }
-#thpsrplwoh .gt_column_spanner_outer {
+#tpktbrhbut .gt_column_spanner_outer {
 color: #333333;
 background-color: #FFFFFF;
 font-size: 100%;
@@ -4303,13 +4303,13 @@ padding-bottom: 0;
 padding-left: 4px;
 padding-right: 4px;
 }
-#thpsrplwoh .gt_column_spanner_outer:first-child {
+#tpktbrhbut .gt_column_spanner_outer:first-child {
 padding-left: 0;
 }
-#thpsrplwoh .gt_column_spanner_outer:last-child {
+#tpktbrhbut .gt_column_spanner_outer:last-child {
 padding-right: 0;
 }
-#thpsrplwoh .gt_column_spanner {
+#tpktbrhbut .gt_column_spanner {
 border-bottom-style: solid;
 border-bottom-width: 2px;
 border-bottom-color: #D3D3D3;
@@ -4320,10 +4320,10 @@ overflow-x: hidden;
 display: inline-block;
 width: 100%;
 }
-#thpsrplwoh .gt_spanner_row {
+#tpktbrhbut .gt_spanner_row {
 border-bottom-style: hidden;
 }
-#thpsrplwoh .gt_group_heading {
+#tpktbrhbut .gt_group_heading {
 padding-top: 8px;
 padding-bottom: 8px;
 padding-left: 5px;
@@ -4348,7 +4348,7 @@ border-right-color: #D3D3D3;
 vertical-align: middle;
 text-align: left;
 }
-#thpsrplwoh .gt_empty_group_heading {
+#tpktbrhbut .gt_empty_group_heading {
 padding: 0.5px;
 color: #333333;
 background-color: #FFFFFF;
@@ -4362,13 +4362,13 @@ border-bottom-width: 2px;
 border-bottom-color: #D3D3D3;
 vertical-align: middle;
 }
-#thpsrplwoh .gt_from_md > :first-child {
+#tpktbrhbut .gt_from_md > :first-child {
 margin-top: 0;
 }
-#thpsrplwoh .gt_from_md > :last-child {
+#tpktbrhbut .gt_from_md > :last-child {
 margin-bottom: 0;
 }
-#thpsrplwoh .gt_row {
+#tpktbrhbut .gt_row {
 padding-top: 8px;
 padding-bottom: 8px;
 padding-left: 5px;
@@ -4386,7 +4386,7 @@ border-right-color: #D3D3D3;
 vertical-align: middle;
 overflow-x: hidden;
 }
-#thpsrplwoh .gt_stub {
+#tpktbrhbut .gt_stub {
 color: #333333;
 background-color: #FFFFFF;
 font-size: 100%;
@@ -4398,7 +4398,7 @@ border-right-color: #D3D3D3;
 padding-left: 5px;
 padding-right: 5px;
 }
-#thpsrplwoh .gt_stub_row_group {
+#tpktbrhbut .gt_stub_row_group {
 color: #333333;
 background-color: #FFFFFF;
 font-size: 100%;
@@ -4411,13 +4411,13 @@ padding-left: 5px;
 padding-right: 5px;
 vertical-align: top;
 }
-#thpsrplwoh .gt_row_group_first td {
+#tpktbrhbut .gt_row_group_first td {
 border-top-width: 2px;
 }
-#thpsrplwoh .gt_row_group_first th {
+#tpktbrhbut .gt_row_group_first th {
 border-top-width: 2px;
 }
-#thpsrplwoh .gt_summary_row {
+#tpktbrhbut .gt_summary_row {
 color: #333333;
 background-color: #FFFFFF;
 text-transform: inherit;
@@ -4426,14 +4426,14 @@ padding-bottom: 8px;
 padding-left: 5px;
 padding-right: 5px;
 }
-#thpsrplwoh .gt_first_summary_row {
+#tpktbrhbut .gt_first_summary_row {
 border-top-style: solid;
 border-top-color: #D3D3D3;
 }
-#thpsrplwoh .gt_first_summary_row.thick {
+#tpktbrhbut .gt_first_summary_row.thick {
 border-top-width: 2px;
 }
-#thpsrplwoh .gt_last_summary_row {
+#tpktbrhbut .gt_last_summary_row {
 padding-top: 8px;
 padding-bottom: 8px;
 padding-left: 5px;
@@ -4442,7 +4442,7 @@ border-bottom-style: solid;
 border-bottom-width: 2px;
 border-bottom-color: #D3D3D3;
 }
-#thpsrplwoh .gt_grand_summary_row {
+#tpktbrhbut .gt_grand_summary_row {
 color: #333333;
 background-color: #FFFFFF;
 text-transform: inherit;
@@ -4451,7 +4451,7 @@ padding-bottom: 8px;
 padding-left: 5px;
 padding-right: 5px;
 }
-#thpsrplwoh .gt_first_grand_summary_row {
+#tpktbrhbut .gt_first_grand_summary_row {
 padding-top: 8px;
 padding-bottom: 8px;
 padding-left: 5px;
@@ -4460,7 +4460,7 @@ border-top-style: double;
 border-top-width: 6px;
 border-top-color: #D3D3D3;
 }
-#thpsrplwoh .gt_last_grand_summary_row_top {
+#tpktbrhbut .gt_last_grand_summary_row_top {
 padding-top: 8px;
 padding-bottom: 8px;
 padding-left: 5px;
@@ -4469,10 +4469,10 @@ border-bottom-style: double;
 border-bottom-width: 6px;
 border-bottom-color: #D3D3D3;
 }
-#thpsrplwoh .gt_striped {
+#tpktbrhbut .gt_striped {
 background-color: rgba(128, 128, 128, 0.05);
 }
-#thpsrplwoh .gt_table_body {
+#tpktbrhbut .gt_table_body {
 border-top-style: solid;
 border-top-width: 2px;
 border-top-color: #D3D3D3;
@@ -4480,7 +4480,7 @@ border-bottom-style: solid;
 border-bottom-width: 2px;
 border-bottom-color: #D3D3D3;
 }
-#thpsrplwoh .gt_footnotes {
+#tpktbrhbut .gt_footnotes {
 color: #333333;
 background-color: #FFFFFF;
 border-bottom-style: none;
@@ -4493,7 +4493,7 @@ border-right-style: none;
 border-right-width: 2px;
 border-right-color: #D3D3D3;
 }
-#thpsrplwoh .gt_footnote {
+#tpktbrhbut .gt_footnote {
 margin: 0px;
 font-size: 90%;
 padding-top: 4px;
@@ -4501,7 +4501,7 @@ padding-bottom: 4px;
 padding-left: 5px;
 padding-right: 5px;
 }
-#thpsrplwoh .gt_sourcenotes {
+#tpktbrhbut .gt_sourcenotes {
 color: #333333;
 background-color: #FFFFFF;
 border-bottom-style: none;
@@ -4514,64 +4514,64 @@ border-right-style: none;
 border-right-width: 2px;
 border-right-color: #D3D3D3;
 }
-#thpsrplwoh .gt_sourcenote {
+#tpktbrhbut .gt_sourcenote {
 font-size: 90%;
 padding-top: 4px;
 padding-bottom: 4px;
 padding-left: 5px;
 padding-right: 5px;
 }
-#thpsrplwoh .gt_left {
+#tpktbrhbut .gt_left {
 text-align: left;
 }
-#thpsrplwoh .gt_center {
+#tpktbrhbut .gt_center {
 text-align: center;
 }
-#thpsrplwoh .gt_right {
+#tpktbrhbut .gt_right {
 text-align: right;
 font-variant-numeric: tabular-nums;
 }
-#thpsrplwoh .gt_font_normal {
+#tpktbrhbut .gt_font_normal {
 font-weight: normal;
 }
-#thpsrplwoh .gt_font_bold {
+#tpktbrhbut .gt_font_bold {
 font-weight: bold;
 }
-#thpsrplwoh .gt_font_italic {
+#tpktbrhbut .gt_font_italic {
 font-style: italic;
 }
-#thpsrplwoh .gt_super {
+#tpktbrhbut .gt_super {
 font-size: 65%;
 }
-#thpsrplwoh .gt_footnote_marks {
+#tpktbrhbut .gt_footnote_marks {
 font-size: 75%;
 vertical-align: 0.4em;
 position: initial;
 }
-#thpsrplwoh .gt_asterisk {
+#tpktbrhbut .gt_asterisk {
 font-size: 100%;
 vertical-align: 0;
 }
-#thpsrplwoh .gt_indent_1 {
+#tpktbrhbut .gt_indent_1 {
 text-indent: 5px;
 }
-#thpsrplwoh .gt_indent_2 {
+#tpktbrhbut .gt_indent_2 {
 text-indent: 10px;
 }
-#thpsrplwoh .gt_indent_3 {
+#tpktbrhbut .gt_indent_3 {
 text-indent: 15px;
 }
-#thpsrplwoh .gt_indent_4 {
+#tpktbrhbut .gt_indent_4 {
 text-indent: 20px;
 }
-#thpsrplwoh .gt_indent_5 {
+#tpktbrhbut .gt_indent_5 {
 text-indent: 25px;
 }
-#thpsrplwoh .katex-display {
+#tpktbrhbut .katex-display {
 display: inline-flex !important;
 margin-bottom: 0.75em !important;
 }
-#thpsrplwoh div.Reactable > div.rt-table > div.rt-thead > div.rt-tr.rt-tr-group-header > div.rt-th-group:after {
+#tpktbrhbut div.Reactable > div.rt-table > div.rt-thead > div.rt-tr.rt-tr-group-header > div.rt-th-group:after {
 height: 0px !important;
 }
 </style>
