--- a/_issues/2025-2/2025-2.html
+++ b/_issues/2025-2/2025-2.html
@@ -300,12 +300,12 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   <!--radix_placeholder_rmarkdown_metadata-->
 
   <script type="text/json" id="radix-rmarkdown-metadata">
-  {"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["title","description","draft","date","volume","issue","editors","articles","output","news"]}},"value":[{"type":"character","attributes":{},"value":["Volume 17/2"]},{"type":"character","attributes":{},"value":["Articles published in the June 2025 issue"]},{"type":"logical","attributes":{},"value":[false]},{"type":"character","attributes":{},"value":["2025-06-01"]},{"type":"integer","attributes":{},"value":[17]},{"type":"integer","attributes":{},"value":[2]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["chief","executive","technical"]}},"value":[{"type":"list","attributes":{},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["name","affiliation","country"]}},"value":[{"type":"character","attributes":{},"value":["Rob J Hyndman"]},{"type":"character","attributes":{},"value":["Monash University"]},{"type":"character","attributes":{},"value":["Australia"]}]}]},{"type":"list","attributes":{},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["name","affiliation","country"]}},"value":[{"type":"character","attributes":{},"value":["Mark van der Loo"]},{"type":"character","attributes":{},"value":["Statistics Netherlands and Leiden University"]},{"type":"character","attributes":{},"value":["Netherlands"]}]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["name","affiliation","country"]}},"value":[{"type":"character","attributes":{},"value":["Emi Tanaka"]},{"type":"character","attributes":{},"value":["Australian National University"]},{"type":"character","attributes":{},"value":["Australia"]}]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["name","affiliation","country"]}},"value":[{"type":"character","attributes":{},"value":["Emily Zabor"]},{"type":"character","attributes":{},"value":["Cleveland Clinic"]},{"type":"character","attributes":{},"value":["United States"]}]}]},{"type":"list","attributes":{},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["name","affiliation","country"]}},"value":[{"type":"character","attributes":{},"value":["Mitchell O'Hara-Wild"]},{"type":"character","attributes":{},"value":["Monash University"]},{"type":"character","attributes":{},"value":["Australia"]}]}]}]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["before","after"]}},"value":[{"type":"NULL"},{"type":"NULL"}]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["rjtools::rjournal_pdf_issue","rjtools::rjournal_web_issue"]}},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["render_all"]}},"value":[{"type":"logical","attributes":{},"value":[true]}]},{"type":"character","attributes":{},"value":["default"]}]},{"type":"character","attributes":{},"value":["RJ-2025-2-bioconductor","RJ-2025-2-cran","RJ-2025-2-rfoundation"]}]}
+  {"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["title","description","draft","date","volume","issue","editors","articles","output","news"]}},"value":[{"type":"character","attributes":{},"value":["Volume 17/2"]},{"type":"character","attributes":{},"value":["Articles published in the June 2025 issue"]},{"type":"logical","attributes":{},"value":[false]},{"type":"character","attributes":{},"value":["2025-06-01"]},{"type":"integer","attributes":{},"value":[17]},{"type":"integer","attributes":{},"value":[2]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["chief","executive","technical"]}},"value":[{"type":"list","attributes":{},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["name","affiliation","country"]}},"value":[{"type":"character","attributes":{},"value":["Rob J Hyndman"]},{"type":"character","attributes":{},"value":["Monash University"]},{"type":"character","attributes":{},"value":["Australia"]}]}]},{"type":"list","attributes":{},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["name","affiliation","country"]}},"value":[{"type":"character","attributes":{},"value":["Mark van der Loo"]},{"type":"character","attributes":{},"value":["Statistics Netherlands and Leiden University"]},{"type":"character","attributes":{},"value":["Netherlands"]}]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["name","affiliation","country"]}},"value":[{"type":"character","attributes":{},"value":["Emi Tanaka"]},{"type":"character","attributes":{},"value":["Australian National University"]},{"type":"character","attributes":{},"value":["Australia"]}]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["name","affiliation","country"]}},"value":[{"type":"character","attributes":{},"value":["Emily Zabor"]},{"type":"character","attributes":{},"value":["Cleveland Clinic"]},{"type":"character","attributes":{},"value":["United States"]}]}]},{"type":"list","attributes":{},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["name","affiliation","country"]}},"value":[{"type":"character","attributes":{},"value":["Mitchell O'Hara-Wild"]},{"type":"character","attributes":{},"value":["Monash University"]},{"type":"character","attributes":{},"value":["Australia"]}]}]}]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["before","after"]}},"value":[{"type":"NULL"},{"type":"NULL"}]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["rjtools::rjournal_web_issue","rjtools::rjournal_pdf_issue"]}},"value":[{"type":"character","attributes":{},"value":["default"]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["render_all"]}},"value":[{"type":"logical","attributes":{},"value":[true]}]}]},{"type":"character","attributes":{},"value":["RJ-2025-2-bioconductor","RJ-2025-2-cran","RJ-2025-2-rfoundation"]}]}
   </script>
   <!--/radix_placeholder_rmarkdown_metadata-->
   
   <script type="text/json" id="radix-resource-manifest">
-  {"type":"character","attributes":{},"value":["2025-2.log","2025-2.pdf","RJournal.sty","RJwrapper.tex","Rlogo-5.png"]}
+  {"type":"character","attributes":{},"value":["2025-2.log","2025-2.pdf","doi.xml","RJournal.sty","RJwrapper.tex","Rlogo-5.png"]}
   </script>
   <!--radix_placeholder_navigation_in_header-->
   <!--/radix_placeholder_navigation_in_header-->
@@ -1743,17 +1743,17 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 <p><a href="../../articles/RJ-2025-011/">The CRAN Task View Initiative</a><br>Achim Zeileis, Roger Bivand, Dirk Eddelbuettel, Kurt Hornik, Julia Piaskowski and Nathalie Vialaneix 4</p>
 <p><a href="../../articles/RJ-2025-012/">boinet: An R Package for Bayesian Optimal Interval Design for Dose Finding Based on Both Efficacy and Toxicity Outcomes</a><br>Yusuke Yamaguchi, Kentaro Takeda and Kazushi Maruo 15</p>
 <p><a href="../../articles/RJ-2025-013/">Partitioned Local Depth (PaLD) Community Analyses in R</a><br>Lucy D’Agostino McGowan, Katherine Moore and Kenneth S. Berenhaut 35</p>
-<p><a href="../../articles/RJ-2025-014/">Student <span class="math inline">\(t\)</span>-Lévy regression model in yuima</a><br>Hiroki Masuda, Lorenzo Mercuri and Yuma Uehara 56</p>
+<p><a href="../../articles/RJ-2025-014/">Student t-Lévy regression model in yuima</a><br>Hiroki Masuda, Lorenzo Mercuri and Yuma Uehara 56</p>
 <p><a href="../../articles/RJ-2025-015/">Sfislands: An R Package for Accommodating Islands and Disjoint Zones in Areal Spatial Modelling</a><br>Kevin Horan, Katarina Domijan and Chris Brunsdon 84</p>
 <p><a href="../../articles/RJ-2025-016/">rPDBapi: A Comprehensive R Package Interface for Accessing the Protein Data Bank</a><br>Selcuk Korkmaz and Bilge Eren Yamasan 109</p>
 <p><a href="../../articles/RJ-2025-017/">rqPen: An R Package for Penalized Quantile Regression</a><br>Ben Sherwood, Shaobo Li and Adam Maidman 146</p>
-<p><a href="../../articles/RJ-2025-019/">bartcs: An R Package for Bayesian Nonparametric Adjustment for Confounding</a><br>Yeonghoon Yoo and Chanmin Kim (corresponding author) 175</p>
-<p><a href="../../articles/RJ-2025-020/">MSmix: An R Package for clustering partial rankings via mixtures of Mallows Models with Spearman distance</a><br>Marta Crispino, Cristina Mollica and Lucia Modugno 205</p>
-<p><a href="../../articles/RJ-2025-018/">CvmortalityMult: Cross-Validation for Multi-Population Mortality Models</a><br>David Atance and Ana Debón 230</p>
+<p><a href="../../articles/RJ-2025-019/">bartcs: An R Package for Bayesian Nonparametric Adjustment for Confounding</a><br>Yeonghoon Yoo and Chanmin Kim (corresponding author) 176</p>
+<p><a href="../../articles/RJ-2025-020/">MSmix: An R Package for clustering partial rankings via mixtures of Mallows Models with Spearman distance</a><br>Marta Crispino, Cristina Mollica and Lucia Modugno 206</p>
+<p><a href="../../articles/RJ-2025-018/">CvmortalityMult: Cross-Validation for Multi-Population Mortality Models</a><br>David Atance and Ana Debón 231</p>
 <h3 id="news-and-notes">News and Notes</h3>
-<p><a href="../../news/RJ-2025-2-bioconductor/">Bioconductor Notes, September 2025</a><br>Maria Doyle, Bioconductor Community Manager and Bioconductor Core Developer Team 257</p>
-<p><a href="../../news/RJ-2025-2-cran/">Changes on CRAN</a><br>Kurt Hornik, Uwe Ligges and Achim Zeileis 261</p>
-<p><a href="../../news/RJ-2025-2-rfoundation/">R Foundation News</a><br>Torsten Hothorn 263</p>
+<p><a href="../../news/RJ-2025-2-bioconductor/">Bioconductor Notes, September 2025</a><br>Maria Doyle, Bioconductor Community Manager and Bioconductor Core Developer Team 258</p>
+<p><a href="../../news/RJ-2025-2-cran/">Changes on CRAN</a><br>Kurt Hornik, Uwe Ligges and Achim Zeileis 262</p>
+<p><a href="../../news/RJ-2025-2-rfoundation/">R Foundation News</a><br>Torsten Hothorn 264</p>
 <!--radix_placeholder_article_footer-->
 <!--/radix_placeholder_article_footer-->
 </div>
@@ -1761,15 +1761,6 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 <div class="d-appendix">
 </div>
 
-<!-- dynamically load mathjax for compatibility with self-contained -->
-<script>
-  (function () {
-    var script = document.createElement("script");
-    script.type = "text/javascript";
-    script.src  = "https://mathjax.rstudio.com/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML";
-    document.getElementsByTagName("head")[0].appendChild(script);
-  })();
-</script>
 
 <!--radix_placeholder_site_after_body-->
 <!--/radix_placeholder_site_after_body-->
