deploy: 6c70b4584adac282fbfc9794d3c58a590c72e7bd

--- a/articles.html
+++ b/articles.html
@@ -2586,7 +2586,7 @@ and effectiveness using several simulation studies.</p>
 </div>
 </div>
 <div class="thumbnail">
-<img data-src="articles/RJ-2025-014/figures/Tikz_standalone.png"/>
+<img/>
 </div>
 <div class="description">
 <h2>Student t-Lévy regression model in yuima</h2>
