deploy: 7b3b1ff6353045c0008f41f39d4b544fb88750bc

--- a/R_package_guidelines.html
+++ b/R_package_guidelines.html
@@ -2247,7 +2247,7 @@ d-article > * {
 <li>Use a version control system (e.g., GitHub, GitLab, BitBucket, R-Forge)</li>
 </ul>
 <h2 id="recommended-best-practices">Recommended best practices</h2>
-<p>In addition, we strong recommend that package authors follow common R package conventions, including but not limited to:</p>
+<p>In addition, we strongly recommend that package authors follow common R package conventions, including but not limited to:</p>
 <ul>
 <li>Offer a bug reporting mechanism, such as GitHub issues.</li>
 <li>Use a consistent naming scheme for functions (e.g., snake_case or camelCase).<br />
